fix(s2): The font scalling removal broke the alignment on the Language toggle. This fixes the alignment to center for the header items

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -9192,6 +9192,7 @@ a.sheetAuthorName:hover {
 .sheetMetaDataBox .sidebarLayout .items {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .marginInlineIndent {
   margin-inline-start: 15px;
